test/bad/classes/inheritance01.px

class A(String) def
    x: Int
